# PyTrading

./: .gitignore  generador_de_arbol.py  mapa_estructura.txt  pyproject.toml
arquitectura del sistema/: Roadmap v1.md  Roadmap.md
arquitectura del sistema/data_store/: JSON de features.md  Módulo DataStore.md  data_store.md
arquitectura del sistema/feature_engine/: Contratos.md  Fases.md  FeatureEngine.md  Features.md  feature_value.md
arquitectura del sistema/market_feed/: DataFrame.md  Fases.md  Función pública (get_ohlcv).md  MarketFeed.md
arquitectura del sistema/trading_ui/: Módulo TradingUI.md  trading_ui.md
data_store/: core.py  market_repo.py  state_repo.py
data_store/tests/: test_core.py  test_features_json.py  test_market_repo.py  test_state_repo.py
documentacion/lightweight-charts/: 5.0.1.html.md  android.html.md  api.html.md  ios.html.md  (+8 more)
feature_engine/: errors.py
frontend/: app.js  index.html  style.css
market_feed/: __init__.py  aggregate.py  calendar.py  errors.py  gaps.py  observability.py  timeframes.py  types.py
marketfeed/: __init__.py  aggregate.py  calendar.py  gaps.py  marketfeed.py  normalize.py  observability.py
tests/: test_alpaca_manual.py  test_calendar_sessions.py  test_marketfeed_phase0.py  test_marketfeed_phase1_normalize.py  test_marketfeed_phase2_yfinance.py  test_marketfeed_phase3_fallback_chain.py  test_marketfeed_phase4_aggregate_4h.py  test_marketfeed_phase4_fallback.py  test_marketfeed_phase5_intraday_gaps.py  test_marketfeed_phase6_4h_e2e.py  test_trading_ui_api.py
trading_ui/: __main__.py  seed.py  server.py
(+255 files in other folders)
