[project]
name = "pytrading"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "pandas-market-calendars",
    "requests",
    "python-dotenv",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[tool.pytest.ini_options]
pythonpath = ["."]
